# adscrub

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  compose.gpu.yaml  compose.yaml  docker-entrypoint.sh  pyproject.toml
docs/: PLAN.md
src/adscrub/: audio.py  chapters.py  cli.py  cut.py  dai.py  db.py  detect.py  feed.py  fingerprint.py  ingest.py  repeats.py  transcribe.py
tests/: test_audio.py  test_chapters.py  test_cli.py  test_cut.py  test_dai.py  test_dai_store.py  test_db.py  test_detect.py  test_detect_coverage.py  test_feed.py  test_fingerprint.py  test_ingest.py  test_repeats.py  test_transcribe.py
tests/fixtures/: feed_a.xml
