[project]
name = "adscrub"
version = "0.1.0"
description = "Self-hosted podcast ad-detection and removal proxy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "feedparser>=6.0.11",
    "httpx>=0.28",
    "feedgen>=1.0.0",
]

[project.scripts]
adscrub = "adscrub.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
