[project]
name = "adscrub"
version = "0.6.1"
description = "Self-hosted podcast ad-detection and removal proxy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "feedparser>=6.0.11",
    "httpx>=0.28",
    "feedgen>=1.0.0",
    "faster-whisper>=1.0",
]

# GPU runtime libs (cuBLAS/cuDNN) for faster-whisper's CUDA path. Large and
# CUDA-specific, so kept out of the base install; `uv sync --extra gpu` on a
# deploy target with real GPU passthrough (see CLAUDE.md).
[project.optional-dependencies]
gpu = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
]

[project.scripts]
adscrub = "adscrub.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
